# ai-launcher

./: .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  commit-lint.yml  publish.yml  tag-protection.yml
docs/: ADDING_PROVIDERS.md  README.md  adding-providers.md  architecture.md  configuration.md  context-transparency.md  installation.md  permission-transparency.md  releasing.md  troubleshooting.md  windows-terminal.md
docs/reviews/: permission-transparency-review-2026-03-25.md
docs/use-cases/: permission-health.md
scripts/: ci-local.sh  release.py  verify-tag-ci.sh
src/ai_launcher/: __init__.py  cli.py
src/ai_launcher/core/: __init__.py  config.py  context_analyzer.py  discovery.py  models.py  provider_data.py  provider_discovery.py
src/ai_launcher/providers/: __init__.py  aider.py  base.py  claude.py  copilot.py  cursor.py  gemini.py  registry.py
src/ai_launcher/ui/: _browser_preview.py  _context_preview.py  _file_preview.py  _preview_helper.py  browser.py  context_viewer.py  discovery.py  formatter.py  permissions_report.py  preview.py  selector.py  settings.py  shared_context.py  startup_report.py
src/ai_launcher/utils/: __init__.py  cleanup.py  fzf.py  git.py  humanize.py  logging.py  paths.py  session.py  terminal.py
tests/: conftest.py  test_aider_provider.py  test_base_provider.py  test_browser.py  test_browser_preview.py  test_claude_data.py  test_claude_provider.py  test_cleanup.py  test_cli.py  test_configuration_preview.py  test_context_analyzer.py  test_context_preview.py  test_context_viewer.py  test_copilot_provider.py  test_cursor_provider.py  test_discovery.py  test_discovery_report.py  test_file_preview.py  test_formatter.py  test_fzf.py  test_gemini_provider.py  test_git.py  test_humanize.py  test_integration.py  test_integration_phase7.py  test_logging.py  test_paths.py  test_permissions_report.py  test_preview.py  test_preview_helper.py  test_preview_refactored.py  test_provider_data.py  test_provider_discovery_refactored.py  test_providers.py  test_selector.py  test_session.py  test_settings_menu.py  test_settings_preview.py  test_shared_context.py  test_startup_report.py  (+2 more)
